Add score indicator

--- a/web_content/css/lah-desktop.css
+++ b/web_content/css/lah-desktop.css
@@ -222,8 +222,8 @@ smaller {
     margin-left: 2px;
 }
 
-#player-count {
-    font-size: 14pt;
+#player-count, #score {
+    font-size: 16pt;
     text-align: left;    
 }
 
@@ -235,6 +235,18 @@ smaller {
     margin-right: 8pt;
     transform: translateY(.25em);
     background-image: url("/img/lah-person.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#score:before {
+    content: "";
+    display: inline-block;
+    width: 1.3em;
+    height: 1.3em;
+    margin-right: 8pt;
+    transform: translateY(.25em);
+    background-image: url("/img/lah-score.png");
     background-repeat: no-repeat;
     background-size: contain;
 }
