--- a/web_content/css/lah-desktop.css
+++ b/web_content/css/lah-desktop.css
@@ -30,6 +30,7 @@
     --card-border-radius: 14px;
     --card-padding: 1em;
     --navbar-height: 36pt;
+    --final-score-row-height: 36pt;
 }
 
 body {
@@ -280,7 +281,65 @@ smaller {
 
 #game-end-heading {
     padding: 16pt 24pt;
-    font-size: 28pt;
+    font-size: 24pt;
+}
+
+#game-end-scoreboard {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    padding: 8pt 24pt;
+    margin-top: 8pt;
+}
+
+#game-end-scoreboard-header {    
+    padding-bottom: 3pt;
+    border-bottom: 1px solid rgba(0, 0, 0, .25);
+}
+
+#game-end-scoreboard-header, #game-end-scoreboard-entries > .scoreboard-entry {
+    display: grid;
+    grid-template-columns: [c-start] 50% [c-2] 20% [c-3] 30% [c-end];
+    grid-template-rows: [r-start] 100% [r-end];
+}
+
+#game-end-scoreboard-entries > .scoreboard-entry > * {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #5a5a5a;
+    font-size: 16pt;
+    margin-left: 2pt;
+    padding-right: 4pt;
+}
+
+/* Hack to get overflow ellipsis to work inside flexbox */
+#game-end-scoreboard-entries > .scoreboard-entry > .text[data-text]:before {
+    content: attr(data-text);
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+#game-end-scoreboard-entries > .scoreboard-entry > *:not(:first-child) {
+    padding-left: 4pt;
+}
+
+#game-end-scoreboard-header > * {
+    font-size: 14pt;
+    color: #333;
+    text-align: left;
+    margin-left: 2pt;
+}
+
+#game-end-scoreboard-entries > .scoreboard-entry {
+    height: var(--final-score-row-height);
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+#game-end-scoreboard-entries > .scoreboard-entry.winner > * {
+    color: #d92;
 }
 
 #game-end-trophies-heading {
@@ -318,6 +377,7 @@ smaller {
     padding-bottom: 16pt;
 }
 
+/* trophy description */
 .trophy:before {
     content: attr(data-trophy-name) ":\a\a" attr(data-trophy-desc);
     white-space: pre-wrap;
@@ -329,8 +389,9 @@ smaller {
     padding: 8pt;
     color: #eee;
     font-size: 11pt;
-    background: #222;
+    background: rgba(30, 30, 30, .97);
     transition: opacity .3s;
+    z-index: 99999;
 }
 
 .trophy:not(:hover):before {
@@ -338,14 +399,33 @@ smaller {
 }
 
 .trophy .trophy-icon {
+    position: relative;
     width: 100px;
     height: 100px;
     border: 3px solid #ddd;
     background: black;
     box-sizing: border-box;
     border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: 100% !important;
 }
 
+/* trophy overlay icon */
+.trophy .trophy-icon:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: url("/img/lah-trophy.png");
+    background-repeat: no-repeat;
+    background-position: 50% 55%;
+    background-size: 60%;
+    filter: drop-shadow(0 0 4px black);
+}
+
+/* trophy name */
 .trophy:after {
     content: attr(data-trophy-name);
     color: #ddd;
