--- a/web_content/css/lah-mobile.css
+++ b/web_content/css/lah-mobile.css
@@ -12,7 +12,18 @@
     }
 
     body {
-        background: #d7d7d7;
+        background-color: var(--main-bg-color);
+        background-image: 
+        repeating-linear-gradient(55deg, 
+        transparent, transparent 1px, 
+        var(--main-bg-line) 1px, var(--main-bg-line) 3px,
+        transparent 3px, transparent 5px),
+
+        repeating-linear-gradient(-55deg, 
+        transparent, transparent 1px, 
+        var(--main-bg-line) 1px, var(--main-bg-line) 3px,
+        transparent 3px, transparent 5px);
+
         margin: 0;
         padding: 0;
         width: 100vw;
@@ -357,38 +368,50 @@
     }
     
     #status {
-        font-size: 14pt;
+        font-size: 12pt;
         font-weight: 800;
         margin-left: 2px;
     }
     
-    #player-count, #score {
+    #status-area .stat {
         font-size: 10pt;
-        text-align: left;    
-    }
-    
-    #player-count:before {
-        content: "";
-        display: inline-block;
-        width: 1.3em;
-        height: 1.3em;
-        margin-right: 4pt;
-        transform: translateY(.25em);
-        background-image: url("/img/lah-person.png");
-        background-repeat: no-repeat;
-        background-size: contain;
+        text-align: left;  
+        max-width: 150px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;  
     }
 
-    #score:before {
+    #status-area .stat.bare {
+        margin-left: 2px;
+        color: #333;
+    }
+
+    #status-area .stat:not(.bare):before {
         content: "";
         display: inline-block;
         width: 1.3em;
         height: 1.3em;
         margin-right: 4pt;
         transform: translateY(.25em);
-        background-image: url("/img/lah-score.png");
         background-repeat: no-repeat;
         background-size: contain;
+    }
+    
+    #status-area #player-count:before {
+        background-image: url("/img/lah-person.png");
+    }
+
+    #status-area #score:before {
+        background-image: url("/img/lah-score.png");
+    }
+
+    #status-area #czar:before {
+        background-image: url("/img/lah-czar.png");
+    }
+
+    #status-area #pending-players:before {
+        background-image: url("/img/lah-pending.png");
     }
 
     /* GAME OVER SCREEN / TROPHIES */
