Bugfixes, trophy balancing
- Make English versions of card text use "en" instead of "en-US"
- Fix custom cards not being styled correctly
- Fix AllTrophyRequirement not deserializing `requirements` property
- Fix typo in "you're the czar" UI text
- Lengthen bot judge delay
- Client now detects HTTPS and uses appropriate websocket protocol

--- a/web_content/css/lah-desktop.css
+++ b/web_content/css/lah-desktop.css
@@ -784,7 +784,7 @@ card[data-card="blank"] .blank-card-text, card[data-card^="custom:"] {
 }
 
 card[white].winner, .card-group.winner card[white] {
-    background: linear-gradient(to bottom, rgb(255, 230, 5), rgb(231, 160, 8));
+    background: linear-gradient(to bottom, rgb(255, 230, 5), rgb(231, 160, 8)) !important;
     color: black;
     border-color: #423b00;
 }
